[tool.poetry]
name = "pympc-panoc-ipopt"
version = "0.1.0"
description = ""
authors = ["mizuhoaoki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
opengen = "^0.7.1"
casadi = "3.5.5"
pandas = "1.2.4"
numpy = "1.20.2"
matplotlib = "3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
